# caption-via-translation

./: .gitignore  README.md  pyproject.toml
configs/: fsdp_config.yaml  fsdp_config_florence2.yaml  multigpu_config.yaml
data/pretrained/Florence-2-base/: config.json
data/pretrained/Florence-2-large/: config.json
data/pretrained/FlorenceGemma2-large/: config.json
data/pretrained/FlorenceGemma2-xlarge/: config.json
data/tok_counts/: tok_counts.json
scripts/: README.md  bake_cc12m.py  bake_cc12m.sh  download_cc12m.py  prepare_cc12m_annotations.py  prepare_cc12m_eval_annotations.py
scripts/finetuning_dataset/: .gitignore  README.md  bake.py  datasets_to_csv.py  recaption.py  translate.py  translate_without_context.py
slurm/continous_pretraining/: 0_4B.sh  11_2B.sh  1_0B.sh  3_5B.sh
slurm/finetuning/: 0_4B.sh  11_2B.sh  1_0B.sh  3_5B.sh
src/: eval.py  eval_loss.py  prepare.py  train.py
src/caption_via_translation/models/: florence2.py  gemma2.py
src/caption_via_translation/process/: processing_florence2.py
